# EugenChess

./: .clang-format  CMakeLists.txt  README.md
h/: Communicator.h  Engine.h  FenUtility.h
h/uci/: UCICommunicator.h  UCIProtocolSpecification.txt  UCIUtility.h
src/: Communicator.cpp  Engine.cpp  FenUtility.cpp
src/uci/: UCICommunicator.cpp  UCIUtility.cpp
test/: CMakeLists.txt  Dummy.cpp  Engine.cpp
test/uci/: Go.cpp  Integration.cpp  OptionsListing.cpp  Position.cpp  PositionTests.cpp  Register.cpp  SetOption.cpp
